--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.47</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.50</version>
+        </dependency>
     </dependencies>
 </project>
