--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>mybatis-cache</module>
         <module>refactor</module>
         <module>clean-code</module>
+        <module>algorithm</module>
     </modules>
 
     <properties>
